diesel_compile_tests/tests/fail/columns_cannot_be_rhs_of_insert.stderr
error[E0271]: type mismatch resolving `<NoFromClause as AppearsInFromClause<table>>::Count == Once`
    --> tests/fail/columns_cannot_be_rhs_of_insert.rs:20:18
     |
  LL |         .execute(&mut conn)
     |          ------- ^^^^^^^^^ type mismatch resolving `<NoFromClause as AppearsInFromClause<table>>::Count == Once`
     |          |
     |          required by a bound introduced by this call
     |
note: expected this to be `diesel::query_source::Once`
    --> tests/fail/columns_cannot_be_rhs_of_insert.rs:6:1
     |
   LL | / table! {
   LL | |     users {
   LL | |         id -> Integer,
   LL | |         name -> Text,
...    |
  LL | | }
     | |_^
note: required for `columns::hair_color` to implement `AppearsOnTable<diesel::query_builder::from_clause::NoFromClause>`
    --> tests/fail/columns_cannot_be_rhs_of_insert.rs:10:9
     |
  LL |         hair_color -> Text,
     |         ^^^^^^^^^^
     = note: associated types for the current `impl` cannot be restricted in `where` clauses
     = note: 1 redundant requirement hidden
     = note: required for `&columns::hair_color` to implement `AppearsOnTable<diesel::query_builder::from_clause::NoFromClause>`
     = note: required for `ColumnInsertValue<name, &hair_color>` to implement `diesel::insertable::InsertValues<_, users::table>`
     = note: required for `ValuesClause<ColumnInsertValue<name, &...>, ...>` to implement `QueryFragment<_>`
     = note: 1 redundant requirement hidden
     = note: required for `InsertStatement<table, ValuesClause<..., ...>>` to implement `QueryFragment<_>`
     = note: required for `InsertStatement<table, ValuesClause<..., ...>>` to implement `ExecuteDsl<_, _>`
note: required by a bound in `diesel::RunQueryDsl::execute`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
     |        ------- required by a bound in this associated function
...
LL |         Self: methods::ExecuteDsl<Conn>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
  
          = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)
For more information about this error, try `rustc --explain E0271`.
